@@ -3,19 +3,15 @@
     <tal:block tal:condition="python:request['jsdisable'] == 'all'">
         <script type="text/javascript"
             tal:attributes="src string:${context/absolute_url}/design.js">
-            /* load design.js from eea */
         </script>
         <script type="text/javascript"
             tal:attributes="src string:${context/absolute_url}/eea-responsive.js">
-            /* load eea-responsive.js from eea */
         </script>
         <script type="text/javascript"
             tal:attributes="src string:${context/absolute_url}/slide.js">
-            /* load slide.js from eea */
         </script>
         <script type="text/javascript"
             tal:attributes="src string:${context/absolute_url}/global_searchbox.js">
-            /* load globals_searchbox.js from eea */
         </script>
 
     </tal:block>
@@ -41,3 +37,7 @@
         </div>
     </div>
 </metal:page>
+
+
+
+
